# vrclipboard-ime-gui

./: README.md  package-lock.json  package.json  release.json  vite.config.ts
src/: App.css  App.tsx  SettingsComponent.tsx  TitleBar.tsx
src-tauri/: 2.0.0-rc  Cargo.toml  config.yaml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: com.rs  config.rs  conversion.rs  felanguage.rs  handler.rs  main.rs  transform_rule.rs  tsf_conversion.rs
src-tauri/src/converter/: calculator.rs  converter.rs  hiragana.rs  katakana.rs  mod.rs  none_converter.rs  roman_to_kanji.rs
src-tauri/src/tsf/: function_provider.rs  input_processor_profile_mgr.rs  mod.rs  search_candidate_provider.rs  thread_mgr.rs
