[package]
name = "vrclipboard-ime-gui"
version = "1.4.0"
description = "VRClipboard IME"
authors = ["mii"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-close", "window-start-dragging", "window-show", "window-unmaximize", "window-minimize", "window-maximize", "window-hide", "window-unminimize", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.38"
chrono-tz = "0.9.0"
anyhow = "1.0.86"
clipboard = "0.5.0"
clipboard-master = "3.1.3"
serde_derive = "1.0.203"
serde_yaml = "0.9.34"
calc = { version = "*", default-features = false }
platform-dirs = "0.3.0"
once_cell = "1.19.0"
rosc = "~0.10"
regex = "1"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_System_Com",
    "Win32_UI_Input_Ime"
]


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
